@@ -10,6 +10,9 @@ update-manager (1:0.126.5) UNRELEASED; urgency=low
   * DistUpgrade/DistUpgradeQuirks.py:
     - mark mysql-{client,server}-5.0 manual installed in the 
       cluster check (LP: #453513)
+    - check if running under a vserver setup and error if this
+      is the case. upstart does not support this kind of setup
+      (LP: #452011)
   * UpdateManager/Core/utils.py:
     - do not show error if DeviceKit.Power is not available
       (LP: #452004)
